--- a/util/package.json
+++ b/util/package.json
@@ -7,7 +7,6 @@
     "ajv": "^6.12.6",
     "csv-parse": "^4.15.3",
     "uuid": "^3.3.3",
-    "uuid4": "^1.1.4",
-    "xlsx": "^0.18.5"
+    "uuid4": "^1.1.4"
   }
 }
