Make local notes staffOnly.

--- a/etc/scu/mapping-rules.json
+++ b/etc/scu/mapping-rules.json
@@ -7476,7 +7476,7 @@
         {
           "rules": [
             {
-              "value": "false",
+              "value": "true",
               "conditions": []
             }
           ],
@@ -7532,7 +7532,7 @@
         {
           "rules": [
             {
-              "value": "false",
+              "value": "true",
               "conditions": []
             }
           ],
@@ -7588,7 +7588,7 @@
         {
           "rules": [
             {
-              "value": "false",
+              "value": "true",
               "conditions": []
             }
           ],
@@ -7644,7 +7644,7 @@
         {
           "rules": [
             {
-              "value": "false",
+              "value": "true",
               "conditions": []
             }
           ],
