--- a/etc/mcphs/Makefile
+++ b/etc/mcphs/Makefile
@@ -4,6 +4,7 @@ home=/home/charles
 data=$(home)/$(lib)
 invdir=$(data)/inv
 mfile=$(invdir)/bibs.mrc
+ermdir=$(data)/erm
 log=$(data)/log
 wd=$(home)/folio-import
 tsvdir=$(wd)/etc/$(lib)
@@ -26,11 +27,39 @@ split-inventory: $(invdir)/*.jsonl
 clean-inventory: $(iinfo)
 	cd $(invdir); rm bibs.mrc; mv raw.marc raw.mrc
 
+licenses: $(ermdir)/*licenses*csv
+	mv $(ermdir)/*licenses*csv $(ermdir)/lic.csv
+	cd $(wd)/erm; node $(lib)Licenses.js $(aref) $(ermdir)/lic.csv > $(log)/make-licenses.log
+	cat $(log)/make-licenses.log
+	@echo "*** Reminder *** POST licenses before making agreements!"
+
+agreements: $(ermdir)/licensesOut.jsonl
+	mv $(ermdir)/*notes*csv $(ermdir)/nts.csv
+	mv $(ermdir)/*resources*csv $(ermdir)/agr.csv
+	cd $(wd)/erm; node $(lib)Agreements.js $(aref) $(ermdir)/nts.csv $(ermdir)/agr.csv > $(log)/make-agreements.log
+	cat $(log)/make-agreements.log
+
+related-agreements: $(ermdir)/agreementsOut.jsonl
+	cd $(wd)/erm; node makeRelatedAgreements $(ermdir) > $(log)/make-related-agreements.log
+	cat $(log)/make-related-agreements.log
+	@echo "*** Reminder *** PUT agreements-reload.jsonl to erm/sas"
+
+agreement-notes: $(ermdir)/agreementsOut.jsonl
+	cd $(wd)/erm; node makeErmNotes.js $(ermdir)/agreementsOut.jsonl $(ermdir)/notes.jsonl > $(log)/make-agreement-notes.log
+	cat $(log)/make-agreement-notes.log
+	@echo "*** Reminder *** POST notes-load.jsonl to notes"
+
+clean-licenses: 
+	mv $(ermdir)/lic.csv $(ermdir)/$(lib)_licenses.csv
+
+clean-agreements:
+	mv $(ermdir)/nts.csv $(ermdir)/$(lib)_notes.csv
+	mv $(ermdir)/agr.csv $(ermdir)/$(lib)_resources.csv
+
 setup:
 	cd $(wd); git pull	
 	cp $(wd)/configs/bash/$(lscript) .
-	cp $(wd)/bash/reference_inventory.sh .
-	cp $(wd)/bash/reference_acq.sh .
+	cp $(wd)/bash/reference_*.sh .
 	cp $(wd)/inventory/marc2inst-$(lib).pl .
 	mkdir -p $(iref)
 	mkdir -p $(aref)
@@ -38,6 +67,7 @@ setup:
 	./$(lscript)
 	./reference_inventory.sh $(iref)
 	./reference_acq.sh $(aref)
+	./reference_erm.sh $(aref)
 	cp $(tsvdir)/*.tsv $(iref)
 
 clean:
