Update to mutable perms script.

--- a/etc/emmanuel/Makefile
+++ b/etc/emmanuel/Makefile
@@ -36,18 +36,23 @@ organizations: $(odir)/*_orgs*csv
 clean-organizations: $(odir)/orgs.csv
 	cd $(odir); mv orgs.csv $(lib)_orgs_load.csv
 
-agreements: $(ermdir)/licensesOut.jsonl
+agreements: $(ermdir)/*.csv
 	mv $(ermdir)/*notes*csv $(ermdir)/nts.csv
 	mv $(ermdir)/*resources*csv $(ermdir)/agr.csv
 	cd $(wd)/erm; node $(lib)Agreements.js $(aref) $(ermdir)/nts.csv $(ermdir)/agr.csv > $(log)/make-agreements.log
 	cat $(log)/make-agreements.log
 
+clean-agreements:
+	mv $(ermdir)/nts.csv $(ermdir)/$(lib)_notes.csv
+	mv $(ermdir)/agr.csv $(ermdir)/$(lib)_resources.csv
 
+erm-notes: $(ermdir)/notes.jsonl
+	cd $(wd)/erm; node makeErmNotes.js $(ermdir)/agreementsOut.jsonl $(ermdir)/notes.jsonl > $(log)/make-erm-notes.log
+	cat $(log)/make-erm-notes.log
 setup:
 	cd $(wd); git pull	
 	cp $(wd)/configs/bash/$(lscript) .
-	cp $(wd)/bash/reference_inventory.sh .
-	cp $(wd)/bash/reference_acq.sh .
+	cp $(wd)/bash/reference_*.sh .
 	cp $(wd)/inventory/marc2inst-$(lib).pl .
 	mkdir -p $(iref)
 	mkdir -p $(aref)
@@ -55,6 +60,7 @@ setup:
 	./$(lscript)
 	./reference_inventory.sh $(iref)
 	./reference_acq.sh $(aref)
+	./reference_erm.sh $(aref)
 	cp $(tsvdir)/*.tsv $(iref)
 
 clean:
