Update to Makefiles.

--- a/etc/emerson/Makefile
+++ b/etc/emerson/Makefile
@@ -2,9 +2,9 @@ lib=emerson
 lscript=login-$(lib)-test.sh
 home=/home/charles
 data=$(home)/$(lib)
-invdir=$(data)/inv
+invdir=$(data)/supp
 mfile=$(invdir)/bibs.mrc
-log=$(data)/log
+log=$(data)/log2
 wd=$(home)/folio-import
 tsvdir=$(wd)/etc/$(lib)
 iref=$(data)/ref/inv
