--- a/inventory2/package.json
+++ b/inventory2/package.json
@@ -5,6 +5,7 @@
   "author": "Charles Ledvina <charles@indexdata.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "csv-parse": "^5.6.0",
     "uuid": "^10.0.0"
   },
   "type": "module"
