--- a/config.default.json
+++ b/config.default.json
@@ -1,8 +1,10 @@
 {
-  okapi: 'http://localhost:9130',
-  authpath: '/bl-users/login',
-  tenant: 'diku',
-  username: 'diku_admin',
-  password: 'admin',
-  delay: 50 // delay between record loads in ms
+  "okapi": "http://localhost:9130",
+  "authpath": "/bl-users/login",
+  "tenant": "diku",
+  "username": "diku_admin",
+  "password": "admin",
+  "delay": 0,
+  "logpath": "",
+  "syscreds": {}
 }
